# pso-rust-vs-zig

./: .gitignore  README.md
rust/: Cargo.toml
rust/src/: dense.rs  dense_matrix.rs  lib.rs  main.rs  random.rs
zig/: build.zig
zig/src/: main.zig  pso.zig
