[package]
name = "pso"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Lisunov"]
license = "unlicense"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dense = { path = "/home/divine/src/rust/dense" }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_core = "0.6.4"

[profile.release]
panic = "abort"
lto = false
codegen-units = 1
strip = true
